# Neuro_MVP

./: .gitignore  LEGACY_INTEGRATION.md  _bench_all.py  _diag.py  _diag2.py  _diag3.py  _diag_500.py  _diag_actor.py  _diag_bandit.py  _diag_cartpole  _diag_cartpole.py  _diag_clip.py  _diag_critic_deep.py  _diag_d1d2_balance.py  _diag_deep.py  _diag_encoder.py  _diag_episodes.py  _diag_gated_stdp.py  _diag_gating.py  _diag_learning.py  _diag_learning_signal.py  _diag_mc.py  _diag_mc_2  _diag_mc_multiseed.py  _diag_mc_plateau.py  _diag_normalization.py  _diag_output.txt  _diag_pipeline.py  _diag_post_fix.py  _diag_root_cause.py  _diag_stdp_traces.py  _diag_trace.py  _diag_v2.py  _diag_w.py  _diag_weights.py  _new_diag_cartpole.py  _probe.py  _smoke_phase6b.py  _smoke_phase6b_unit.py  _sweep.py  (+24 more)
arena/: __init__.py  agent_factory.py  benchmark.py  core.py  environments.py  gym_env.py  snn_agent.py  task_config.py
colab/: DIAGNOZA_phase6b.md  phase6b_capability.ipynb  phase6b_demo.ipynb  phase6b_diag.ipynb  phase6b_verify_phases.ipynb  phase_u_capability.ipynb  phase_u_embodied_reach.ipynb
core/: __init__.py  active_inference.py  astrocyte.py  attention.py  backend.py  basal_ganglia.py  basal_ganglia_jax.py  brain_graph.py  cerebellum.py  columnar.py  competitive_layer.py  config.py  cortex.py  ec.py  episodic_memory.py  error_neuron.py  error_neuron_jax.py  free_energy.py  hippocampus.py  interneuron.py  learning_pipeline.py  m1.py  network.py  neuromodulator.py  neuron.py  oscillator.py  pc_active.py  pc_attention.py  pc_brain.py  pc_graph.py  pc_hippocampus.py  pc_memory.py  pc_module.py  pc_neuromod.py  pc_oscillator.py  pc_precision.py  pc_sleep.py  pc_structural.py  pfc.py  plasticity.py  (+15 more)
embodiment/: __init__.py  babbling.py  babbling_env.py  bandit.py  (+8 more)
(+149 files in other folders)
