[project]
name = "neuro-mvp"
version = "0.1.0"
description = ""
authors = [
    {name = "MateuszSieczka",email = "113633794+MateuszSieczka@users.noreply.github.com"}
]
requires-python = "^3.14"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
