[project]
name = "neuro-mvp"
version = "0.1.0"
description = ""
authors = [
    {name = "MateuszSieczka",email = "113633794+MateuszSieczka@users.noreply.github.com"}
]
requires-python = "^3.14"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]

[tool.poetry]
packages = [{include = "core"}]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
