[project]
name = "neuro-mvp"
version = "0.1.0"
description = ""
authors = [
    {name = "MateuszSieczka",email = "113633794+MateuszSieczka@users.noreply.github.com"}
]
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "gymnasium (>=1.2.3,<2.0.0)",
    "optax (>=0.2.8,<0.3.0)"
]

[tool.poetry]
packages = [{include = "core"}, {include = "sensory"}, {include = "embodiment"}]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "tests_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
